2008-08-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9063: Feature: Make Position of Editpanel more flexible

2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8988: htmlArea RTE: Pasting text from MS Word to Firefox 3 brings a lot of garbage
	* Follow-up for issue #8799: htmlArea RTE: correction to two path settings

2008-08-12  Dmitry Dulepov  <dmotry@typo3.org>

	* Fixed bug #9060: Wrong alert text in Constant editor

2008-08-11  Benjamin Mack  <benni@typo3.org>

	* Fixed #8259: Cleanup: Call to t3lib_div::devLog() without key (Thanks to Francois Suter)

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #8673: htmlArea RTE drag n drop tab of image insertion not functional
	* Follow-up for issue #8717: Add suggested doc extension to htmlArea RTE ext_emconf.php
	* Fixed bug #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Added feature #9157: htmlArea RTE EM setting for DAM becomes deprecated with DAM 1.1+
	* Follow-up on feature #9157: htmlArea RTE EM setting for DAM - correcting test on DAM version
	* Updated htmlArea RTE version to 1.8.0 for TYPO3 4.3.0 alpha

2008-08-11  Ingo Renner  <ingo@typo3.org>

	* Reverted Change from 2008-08-06 in t3lib_div leading to nonfunctional clipboard

2008-08-08  Oliver Hader  <oliver@typo3.org>

	* Added feature #9075: Add record row to recStatInfoHooks in tx_cms_layout

2008-08-08  Thomas Hempel  <thomas@typo3.org>

	* Added external JavaScript library extJS 2.2 to contrib

2008-08-07  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #1897: Basic Configuration uses different scheme to write im_path to localconf.php

2008-08-07  Ingo Renner  <ingo@typo3.org>

	* Added Feature #8515: Speed up tslib_cObj->getTreeList by caching its results

2008-08-06  Ingo Renner  <ingo@typo3.org>

	* Fixed bug: PHP 5.3 throws a warning in class.t3lib_befunc.php on line 3348: trim() expects parameter 1 to be string, array given